feature delete violation comment api spec (#22)
* fix api spec

* add mock api

* fix Makefile
